# cpp_infer

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
include/: args.h  last.h  utility.h  utils.h
src/: args.cpp  last.cpp  main.cpp  utility.cpp  utils.cpp
